feat: add service worker to cache resources and ipfs requests (prod only)

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -2,6 +2,6 @@
     "extends": "tsconfig/react.json",
     "include": ["./src/**/*"],
     "compilerOptions": {
-        "outDir": "./dist"
+        "lib": ["dom", "esnext", "webworker"]
     }
 }
