--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,6 +24,7 @@
         "@carrot-kpi/ui": "workspace:*",
         "@emotion/react": "^11.10.4",
         "@fontsource/ibm-plex-mono": "^4.5.13",
+        "@popperjs/core": "^2.11.6",
         "class-variance-authority": "^0.4.0",
         "ethers": "^5.7.1",
         "i18next": "^22.0.6",
@@ -51,7 +52,9 @@
         "size-limit": "^8.1.0",
         "tailwindcss": "^3.2.4",
         "tsconfig": "workspace:*",
-        "typescript": "^4.7.4"
+        "typescript": "^4.7.4",
+        "workbox-precaching": "^6.5.4",
+        "workbox-routing": "^6.5.4"
     },
     "browserslist": {
         "production": [
