--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,7 @@
         "format": "eslint --fix --ext .tsx,.ts,.js,.json ./",
         "clean": "rimraf ./build",
         "build": "pnpm clean && GENERATE_SOURCEMAP=false craco build",
+        "ipfs-build": "pnpm build && ./scripts/zip.js",
         "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
         "size-limit": "size-limit",
         "start": "craco start"
@@ -38,8 +39,7 @@
     },
     "devDependencies": {
         "@craco/craco": "^7.0.0",
-        "@size-limit/preset-app": "^8.1.0",
-        "@size-limit/webpack-why": "^8.1.0",
+        "@size-limit/file": "^8.1.0",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.6",
         "@types/react-router-dom": "^5.3.3",
