feat(ui): export styles.css and write proper readme

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,6 +9,9 @@
   "exports": {
     ".": {
       "import": "./dist/index.js"
+    },
+    "./styles.css": {
+      "import": "./dist/styles.css"
     }
   },
   "files": [
