--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -27,7 +27,7 @@
         "clean": "rimraf ./dist",
         "test": "jest",
         "size-limit": "size-limit",
-        "analyze": "size-limit --why"
+        "release": "pnpm publish"
     },
     "dependencies": {
         "@ethersproject/address": "^5.7.0",
