--- a/.prettierrc
+++ b/.prettierrc
@@ -1,15 +1,16 @@
 {
-  "tabWidth": 4,
-  "useTabs": false,
-  "proseWrap": "always",
-  "semi": true,
-  "overrides": [
-    {
-      "files": "*.{yaml,yml,md}",
-      "options": {
-        "printWidth": 100,
-        "tabWidth": 2
-      }
-    }
-  ]
+    "tabWidth": 4,
+    "useTabs": false,
+    "proseWrap": "always",
+    "semi": true,
+    "overrides": [
+        {
+            "files": ["*.yaml", "*.yml", "*.md"],
+            "options": {
+                "printWidth": 80,
+                "proseWrap": "always",
+                "tabWidth": 2
+            }
+        }
+    ]
 }
