--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,8 +10,8 @@
         "shared-dependencies.json"
     ],
     "scripts": {
-        "lint": "eslint --ext .tsx,.ts ./src",
-        "format": "eslint --fix --ext .tsx,.ts,.js,.json ./",
+        "lint": "eslint --ext .tsx,.ts ./src && prettier --check './*.{json,.md}'",
+        "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './*.{json,.md}'",
         "clean": "rimraf ./build",
         "build": "pnpm clean && GENERATE_SOURCEMAP=false craco build",
         "ipfs-build": "pnpm build && ./scripts/zip.js",
