--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,73 +1,76 @@
 {
-  "name": "@carrot-kpi/ui",
-  "author": "Federico Luzzi",
-  "version": "0.4.0",
-  "license": "GPL-3.0-or-later",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js"
+    "name": "@carrot-kpi/ui",
+    "author": "Federico Luzzi",
+    "version": "0.4.0",
+    "license": "GPL-3.0-or-later",
+    "main": "./dist/index.js",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js"
+        },
+        "./styles.css": {
+            "import": "./dist/styles.css"
+        },
+        "./tailwind-preset": {
+            "import": "./dist/tailwind.config.js"
+        }
     },
-    "./styles.css": {
-      "import": "./dist/styles.css"
+    "files": [
+        "dist"
+    ],
+    "publishConfig": {
+        "access": "public"
+    },
+    "scripts": {
+        "lint": "eslint --ext .tsx,.ts ./src && prettier --check './*.{json,md}'",
+        "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './*.{json,md}'",
+        "build": "pnpm clean && rollup -c rollup.config.js",
+        "clean": "rimraf ./dist",
+        "test": "echo 'No tests' && exit 0",
+        "size-limit": "size-limit",
+        "release": "pnpm publish",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
+    },
+    "dependencies": {},
+    "peerDependencies": {
+        "@fontsource/ibm-plex-mono": "^4.5.12",
+        "react": "^18.2.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.19.3",
+        "@rollup/plugin-commonjs": "^22.0.2",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-node-resolve": "^14.1.0",
+        "@size-limit/preset-small-lib": "^8.1.0",
+        "@storybook/addon-actions": "^6.5.12",
+        "@storybook/addon-essentials": "^6.5.13",
+        "@storybook/addon-interactions": "^6.5.12",
+        "@storybook/addon-links": "^6.5.13",
+        "@storybook/builder-webpack5": "^6.5.13",
+        "@storybook/manager-webpack5": "^6.5.13",
+        "@storybook/react": "^6.5.13",
+        "@storybook/testing-library": "^0.0.13",
+        "@types/react": "^18.0.21",
+        "@types/rollup-plugin-peer-deps-external": "^2.2.1",
+        "autoprefixer": "^10.4.13",
+        "babel-loader": "^8.2.5",
+        "class-variance-authority": "^0.3.0",
+        "eslint-config-custom": "workspace:*",
+        "postcss": "^8.4.19",
+        "postcss-loader": "^7.0.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "rimraf": "^3.0.2",
+        "rollup": "^2.79.1",
+        "rollup-plugin-peer-deps-external": "^2.2.4",
+        "rollup-plugin-postcss": "^4.0.2",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-typescript2": "^0.34.0",
+        "size-limit": "^8.1.0",
+        "tailwindcss": "^3.2.4",
+        "tsconfig": "workspace:*"
     }
-  },
-  "files": [
-    "dist"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "scripts": {
-    "lint": "eslint --ext .tsx,.ts ./src",
-    "format": "eslint --fix --ext .tsx,.ts,.js,.json ./",
-    "build": "pnpm clean && rollup -c rollup.config.js",
-    "clean": "rimraf ./dist",
-    "test": "echo 'No tests' && exit 0",
-    "size-limit": "size-limit",
-    "release": "pnpm publish",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "dependencies": {},
-  "peerDependencies": {
-    "@fontsource/ibm-plex-mono": "^4.5.12",
-    "react": "^18.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@rollup/plugin-commonjs": "^22.0.2",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^14.1.0",
-    "@size-limit/preset-small-lib": "^8.1.0",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.13",
-    "@storybook/addon-interactions": "^6.5.12",
-    "@storybook/addon-links": "^6.5.13",
-    "@storybook/builder-webpack5": "^6.5.13",
-    "@storybook/manager-webpack5": "^6.5.13",
-    "@storybook/react": "^6.5.13",
-    "@storybook/testing-library": "^0.0.13",
-    "@types/react": "^18.0.21",
-    "@types/rollup-plugin-peer-deps-external": "^2.2.1",
-    "autoprefixer": "^10.4.13",
-    "babel-loader": "^8.2.5",
-    "class-variance-authority": "^0.3.0",
-    "eslint-config-custom": "workspace:*",
-    "postcss": "^8.4.19",
-    "postcss-loader": "^7.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.79.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.34.0",
-    "size-limit": "^8.1.0",
-    "tailwindcss": "^3.2.4",
-    "tsconfig": "workspace:*"
-  }
 }
