--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,7 +14,8 @@
             "import": "./dist/styles.css"
         },
         "./tailwind-preset": {
-            "import": "./dist/tailwind.config.js"
+            "import": "./dist/tailwind.config.js",
+            "require": "./dist/tailwind.config.cjs"
         }
     },
     "files": [
