--- a/turbo.json
+++ b/turbo.json
@@ -19,7 +19,9 @@
         "release": {
             "dependsOn": ["^build"]
         },
-        "size-limit": {},
+        "size-limit": {
+            "dependsOn": ["^build"]
+        },
         "lint": {},
         "format": {}
     },
