--- a/turbo.json
+++ b/turbo.json
@@ -14,7 +14,7 @@
             ]
         },
         "start": {
-            "dependsOn": ["build"]
+            "dependsOn": ["^build"]
         },
         "release": {
             "dependsOn": ["build"]
