feat: add inputs to turbo json

--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,8 @@
                 "src/**/*.{ts,tsx}",
                 "tests/**/*.{ts,tsx}",
                 "src/**/*.test.{ts,tsx}",
+                "src/**/*.sol",
+                "tests/**/*.sol",
                 "babel.config.json"
             ]
         },
