--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -26,6 +26,7 @@
         "@emotion/react": "^11.10.4",
         "@fontsource/ibm-plex-mono": "^4.5.13",
         "@popperjs/core": "^2.11.6",
+        "@rainbow-me/rainbowkit": "^0.8.1",
         "class-variance-authority": "^0.4.0",
         "ethers": "^5.7.1",
         "i18next": "^22.0.6",
@@ -35,7 +36,7 @@
         "react-dom": "^18.2.0",
         "react-i18next": "^12.0.0",
         "react-router-dom": "^6.3.0",
-        "wagmi": "^0.8.5"
+        "wagmi": "^0.9.4"
     },
     "devDependencies": {
         "@craco/craco": "^7.0.0",
