--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,10 +32,9 @@
         "test": "echo 'No tests' && exit 0",
         "size-limit": "size-limit",
         "release": "pnpm publish",
-        "storybook": "start-storybook -p 6006",
+        "start": "start-storybook -p 6006",
         "build-storybook": "build-storybook"
     },
-    "dependencies": {},
     "peerDependencies": {
         "@fontsource/ibm-plex-mono": "^4.5.12",
         "react": "^18.2.0"
@@ -71,6 +70,7 @@
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.34.0",
         "size-limit": "^8.1.0",
+        "storybook-dark-mode": "^2.0.4",
         "tailwindcss": "^3.2.4",
         "tsconfig": "workspace:*"
     }
