[WIP] Wallet connection (#20)
* feat: integrate rainbow for wallet connection

* fix(react): fix some wagmi imports

* fix(react): remove some ts non null assertions and warning suppressions

* chore: enable turbo remote caching

* feat(frontend): create page link, update shared deps, make svg icons svg, rainbow theme

* chore(react): v0.18.0

* feat(ui): storybook dark mode

* feat: first connected wallet state implementations

* fix(frontend): fix formatting issues

* chore(subgraph): comment out test command until matchstick works

* feat(frontend): first implementation of a network switcher

* feat(frontend): add caret icon, open chain modal on chain switcher click, and simplify component

* fix(react): remove useless chain dependency in use kpi tokens hook

* feat(frontend): correctly show network even when no wallet is connected

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -23,10 +23,11 @@
         "@carrot-kpi/react": "workspace:*",
         "@carrot-kpi/sdk": "workspace:*",
         "@carrot-kpi/ui": "workspace:*",
-        "@emotion/react": "^11.10.4",
         "@fontsource/ibm-plex-mono": "^4.5.13",
         "@popperjs/core": "^2.11.6",
+        "@rainbow-me/rainbowkit": "^0.8.1",
         "class-variance-authority": "^0.4.0",
+        "ethereum-blockies-base64": "^1.0.2",
         "ethers": "^5.7.1",
         "i18next": "^22.0.6",
         "ipfs-core": "^0.15.4",
