--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "subgraph",
+    "name": "@carrot-kpi/subgraph",
     "license": "UNLICENSED",
     "scripts": {
         "codegen": "graph codegen",
