--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
     "type": "module",
     "name": "@carrot-kpi/react",
-    "author": "Federico Luzzi",
+    "author": "Federico Luzzi <federico.luzzi@protonmail.com>",
     "version": "0.19.0",
     "license": "GPL-3.0-or-later",
     "main": "./dist/index.js",
