--- a/packages/ipfs-pinner/Cargo.toml
+++ b/packages/ipfs-pinner/Cargo.toml
@@ -3,11 +3,15 @@ name = "ipfs-pinner"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+dotenv = ["dep:dotenv"]
+
 [dependencies]
 ethers = { version = "1.0.2", features = ["ws", "rustls"] }
 tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
 eyre = "0.6.8"
 lazy_static = "1.4.0"
+dotenv = { version = "0.15.0", optional = true }
 
 # Telemetry
 yansi = "0.5.1"
