feat(ui): implement markdown input component

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "extends": "tsconfig/ui.json",
-    "include": ["./src/**/*"],
+    "include": ["./src/**/*", "./custom.d.ts"],
     "compilerOptions": {
         "outDir": "./dist"
     }
