--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -53,6 +53,10 @@
         "@storybook/manager-webpack5": "^6.5.13",
         "@storybook/react": "^6.5.13",
         "@storybook/testing-library": "^0.0.13",
+        "@tailwindcss/typography": "^0.5.8",
+        "@tiptap/extension-placeholder": "2.0.0-beta.209",
+        "@tiptap/react": "2.0.0-beta.209",
+        "@tiptap/starter-kit": "2.0.0-beta.209",
         "@types/react": "^18.0.21",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
         "autoprefixer": "^10.4.13",
