--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,9 @@
 name: CI
 on:
+  push:
+    branches:
+      - main
+      - develop
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -23,10 +27,6 @@ jobs:
         with:
           version: latest
           run_install: false
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
       - name: Get pnpm store directory
         id: pnpm-cache
         shell: bash
