--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -44,6 +44,7 @@
         "@rollup/plugin-commonjs": "^22.0.2",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^14.1.0",
+        "@rollup/plugin-url": "^8.0.1",
         "@size-limit/preset-small-lib": "^8.1.0",
         "@storybook/addon-actions": "^6.5.12",
         "@storybook/addon-essentials": "^6.5.13",
@@ -53,6 +54,7 @@
         "@storybook/manager-webpack5": "^6.5.13",
         "@storybook/react": "^6.5.13",
         "@storybook/testing-library": "^0.0.13",
+        "@svgr/rollup": "^6.5.1",
         "@tailwindcss/typography": "^0.5.8",
         "@tiptap/extension-placeholder": "2.0.0-beta.209",
         "@tiptap/react": "2.0.0-beta.209",
