--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -41,6 +41,7 @@
     "devDependencies": {
         "@craco/craco": "^7.0.0",
         "@size-limit/file": "^8.1.0",
+        "@tailwindcss/line-clamp": "^0.4.2",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.6",
         "@types/react-router-dom": "^5.3.3",
