--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -69,6 +69,7 @@
         "postcss-loader": "^7.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-number-format": "^5.1.2",
         "rimraf": "^3.0.2",
         "rollup": "^2.79.1",
         "rollup-plugin-peer-deps-external": "^2.2.4",
