--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -41,6 +41,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.19.3",
+        "@popperjs/core": "^2.11.6",
         "@rollup/plugin-commonjs": "^22.0.2",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^14.1.0",
@@ -54,6 +55,7 @@
         "@storybook/manager-webpack5": "^6.5.13",
         "@storybook/react": "^6.5.13",
         "@storybook/testing-library": "^0.0.13",
+        "@storybook/theming": "^6.5.15",
         "@svgr/rollup": "^6.5.1",
         "@svgr/webpack": "^6.5.1",
         "@tailwindcss/typography": "^0.5.8",
@@ -72,6 +74,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-number-format": "^5.1.2",
+        "react-popper": "^2.3.0",
         "rimraf": "^3.0.2",
         "rollup": "^2.79.1",
         "rollup-plugin-peer-deps-external": "^2.2.4",
