--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -55,6 +55,7 @@
         "@storybook/react": "^6.5.13",
         "@storybook/testing-library": "^0.0.13",
         "@svgr/rollup": "^6.5.1",
+        "@svgr/webpack": "^6.5.1",
         "@tailwindcss/typography": "^0.5.8",
         "@tiptap/extension-placeholder": "2.0.0-beta.209",
         "@tiptap/react": "2.0.0-beta.209",
@@ -65,10 +66,12 @@
         "babel-loader": "^8.2.5",
         "class-variance-authority": "^0.3.0",
         "eslint-config-custom": "workspace:*",
+        "file-loader": "^6.2.0",
         "postcss": "^8.4.19",
         "postcss-loader": "^7.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-number-format": "^5.1.2",
         "rimraf": "^3.0.2",
         "rollup": "^2.79.1",
         "rollup-plugin-peer-deps-external": "^2.2.4",
