chore(ui): specific ts build config to exclude stories from end bundle

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,7 +1,4 @@
 {
     "extends": "tsconfig/ui.json",
-    "include": ["./src/**/*", "./custom.d.ts"],
-    "compilerOptions": {
-        "outDir": "./dist"
-    }
+    "include": ["./src/**/*", "./custom.d.ts"]
 }
