--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -41,6 +41,8 @@
     },
     "devDependencies": {
         "@babel/core": "^7.19.3",
+        "@ethersproject/address": "^5.7.0",
+        "@ethersproject/bignumber": "^5.7.0",
         "@popperjs/core": "^2.11.6",
         "@rollup/plugin-commonjs": "^22.0.2",
         "@rollup/plugin-json": "^4.1.0",
@@ -75,6 +77,7 @@
         "react-dom": "^18.2.0",
         "react-number-format": "^5.1.2",
         "react-popper": "^2.3.0",
+        "react-use": "^17.4.0",
         "rimraf": "^3.0.2",
         "rollup": "^2.79.1",
         "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -85,5 +88,8 @@
         "storybook-dark-mode": "^2.0.4",
         "tailwindcss": "^3.2.4",
         "tsconfig": "workspace:*"
+    },
+    "dependencies": {
+        "@uniswap/token-lists": "1.0.0-beta.31"
     }
 }
