chore(ui): emit index.d.ts and add css to size limit

--- a/packages/ui/tsconfig.build.json
+++ b/packages/ui/tsconfig.build.json
@@ -3,6 +3,8 @@
     "include": ["./src/**/*", "./custom.d.ts"],
     "exclude": ["./src/**/*.stories.tsx"],
     "compilerOptions": {
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "declaration": true,
+        "rootDir": "./src"
     }
 }
