--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -80,6 +80,7 @@
         "postcss": "^8.4.19",
         "postcss-loader": "^7.0.2",
         "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "rimraf": "^3.0.2",
         "rollup": "^2.79.1",
         "rollup-plugin-peer-deps-external": "^2.2.4",
