--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -46,6 +46,7 @@
         "@types/react-dom": "^18.0.6",
         "@types/react-router-dom": "^5.3.3",
         "autoprefixer": "^10.4.13",
+        "buffer": "^6.0.3",
         "cross-env": "^7.0.3",
         "eslint-config-custom": "workspace:*",
         "postcss": "^8.4.19",
