feat(ui,sdk): move uri to https and parse ens address utils to sdk to share them more

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,6 +36,7 @@
         "build-storybook": "build-storybook"
     },
     "dependencies": {
+        "@carrot-kpi/sdk": "workspace:*",
         "@ethersproject/address": "^5.7.0",
         "@ethersproject/bignumber": "^5.7.0",
         "@popperjs/core": "^2.11.6",
