--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,7 +29,8 @@
     },
     "dependencies": {
         "@carrot-kpi/sdk": "workspace:*",
-        "@ethersproject/bignumber": "^5.7.0"
+        "@ethersproject/bignumber": "^5.7.0",
+        "@uniswap/token-lists": "1.0.0-beta.31"
     },
     "peerDependencies": {
         "i18next": "^22.0.2",
