--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "tsconfig/react.json",
     "include": ["./src/**/*"],
     "compilerOptions": {
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "rootDir": "./src"
     }
 }
