chore(ui): update sdk lib ts config

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "tsconfig/sdk.json",
     "include": ["./src/**/*", "./src/abis/*.json"],
     "compilerOptions": {
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "rootDir": "./src"
     }
 }
