--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -40,6 +40,7 @@
     },
     "devDependencies": {
         "@craco/craco": "^7.0.0",
+        "@fontsource/inter": "^4.5.15",
         "@size-limit/file": "^8.1.0",
         "@tailwindcss/line-clamp": "^0.4.2",
         "@types/react": "^18.0.25",
