chore(react): fix size limit task

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,5 +45,7 @@ jobs:
         run: pnpm lint
       - name: Test
         run: pnpm test
+      - name: Build
+        run: pnpm build
       - name: Size check
         run: pnpm size-limit
