--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "license": "GPL-3.0-or-later",
     "scripts": {
         "build": "turbo run build",
+        "build-storybook": "turbo run build-storybook --filter @carrot-kpi/ui",
         "lint": "turbo run lint",
         "format": "turbo run format",
         "start": "turbo run start",
