--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,11 +43,14 @@
         "@tiptap/extension-placeholder": "2.0.0-beta.209",
         "@tiptap/react": "2.0.0-beta.209",
         "@tiptap/starter-kit": "2.0.0-beta.209",
+        "@types/react-virtualized-auto-sizer": "^1.0.1",
         "@uniswap/token-lists": "1.0.0-beta.31",
         "class-variance-authority": "^0.3.0",
         "react-number-format": "^5.1.2",
         "react-popper": "^2.3.0",
-        "react-use": "^17.4.0"
+        "react-use": "^17.4.0",
+        "react-virtualized-auto-sizer": "^1.0.7",
+        "react-window": "^1.8.8"
     },
     "peerDependencies": {
         "@fontsource/ibm-plex-mono": "^4.5.12",
@@ -74,6 +77,7 @@
         "@svgr/webpack": "^6.5.1",
         "@tailwindcss/typography": "^0.5.8",
         "@types/react": "^18.0.21",
+        "@types/react-window": "^1.8.5",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
         "autoprefixer": "^10.4.13",
         "babel-loader": "^8.2.5",
