--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,6 +54,7 @@
     },
     "peerDependencies": {
         "@fontsource/ibm-plex-mono": "^4.5.12",
+        "@fontsource/inter": "^4.5.15",
         "react": "^18.2.0"
     },
     "devDependencies": {
