--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -13,9 +13,6 @@
             "import": "./dist/index.js"
         }
     },
-    "files": [
-        "dist"
-    ],
     "publishConfig": {
         "access": "public"
     },
@@ -37,13 +34,13 @@
         "@ethersproject/units": "^5.7.0",
         "@ethersproject/wallet": "^5.7.0",
         "decimal.js-light": "^2.5.1",
-        "ethers": "^5.7.0",
         "multiformats": "^9.9.0"
     },
     "devDependencies": {
         "@babel/core": "^7.19.3",
         "@babel/preset-env": "^7.19.4",
         "@babel/preset-typescript": "^7.18.6",
+        "@ethersproject/abi": "^5.7.0",
         "@jest/globals": "^29.2.2",
         "@rollup/plugin-commonjs": "^23.0.2",
         "@rollup/plugin-json": "^5.0.1",
