feat(react): new use watch data and use watch owner using wagmi

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "extends": "tsconfig/sdk.json",
-    "include": ["./src/**/*", "./src/abis/*.json"],
+    "include": ["./src/**/*"],
     "compilerOptions": {
         "outDir": "./dist",
         "rootDir": "./src"
