--- a/packages/sdk/tsconfig.build.json
+++ b/packages/sdk/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
     "extends": "tsconfig/ui.json",
-    "include": ["./src/**/*", "./custom.d.ts"],
+    "include": ["./src/**/*"],
     "exclude": ["./src/**/*.test.ts"],
     "compilerOptions": {
         "outDir": "./dist",
