--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,62 +1,88 @@
 {
     "name": "@carrot-kpi/frontend",
     "license": "GPL-3.0-or-later",
-    "version": "1.0.0-rc.2",
+    "version": "1.0.0-rc.19",
     "description": "Frontend for Carrot KPI protocol v1.",
+    "main": "./dist/bootstrap.js",
+    "module": "./dist/bootstrap.js",
+    "types": "./dist/bootstrap.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/bootstrap.js"
+        },
+        "./styles.css": {
+            "import": "./dist/styles.css"
+        }
+    },
     "publishConfig": {
         "access": "public"
     },
-    "files": [
-        "shared-dependencies.json"
-    ],
     "scripts": {
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './*.{json,.md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './*.{json,.md}'",
-        "clean": "rimraf ./build",
-        "build": "pnpm clean && GENERATE_SOURCEMAP=false craco build",
-        "ipfs-build": "pnpm build && ./scripts/zip.js",
+        "clean": "rimraf ./build && rimraf ./dist",
+        "build": "yarn clean && GENERATE_SOURCEMAP=false craco build",
+        "build-library": "yarn clean && rollup -c rollup.config.js",
         "test": "react-scripts test --env=jsdom --watchAll=false --passWithNoTests",
         "size-limit": "size-limit",
         "start": "craco start"
     },
     "dependencies": {
-        "@carrot-kpi/react": "workspace:*",
-        "@carrot-kpi/sdk": "workspace:*",
-        "@carrot-kpi/ui": "workspace:*",
-        "@fontsource/ibm-plex-mono": "^4.5.13",
-        "@fontsource/inter": "^4.5.15",
-        "@popperjs/core": "^2.11.6",
-        "@rainbow-me/rainbowkit": "^0.8.1",
+        "@carrot-kpi/react": "*",
+        "@carrot-kpi/sdk": "*",
+        "@carrot-kpi/ui": "*",
         "class-variance-authority": "^0.4.0",
         "ethereum-blockies-base64": "^1.0.2",
         "ethers": "^5.7.1",
-        "i18next": "^22.0.6",
         "ipfs-core": "^0.15.4",
         "multiformats": "^9.7.1",
+        "react-router-dom": "^6.3.0"
+    },
+    "peerDependencies": {
+        "@fontsource/ibm-plex-mono": "^4.5.13",
+        "@fontsource/inter": "^4.5.15",
+        "i18next": "^22.0.2",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
         "react-i18next": "^12.0.0",
-        "react-router-dom": "^6.3.0",
         "wagmi": "^0.9.5"
     },
     "devDependencies": {
         "@craco/craco": "^7.0.0",
+        "@fontsource/ibm-plex-mono": "^4.5.13",
+        "@fontsource/inter": "^4.5.15",
+        "@rainbow-me/rainbowkit": "^0.8.1",
+        "@rollup/plugin-commonjs": "^22.0.2",
+        "@rollup/plugin-json": "^6.0.0",
+        "@rollup/plugin-node-resolve": "^14.1.0",
+        "@rollup/plugin-replace": "^5.0.2",
+        "@rollup/plugin-url": "^8.0.1",
         "@size-limit/file": "^8.1.0",
+        "@svgr/rollup": "^6.5.1",
         "@tailwindcss/line-clamp": "^0.4.2",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.6",
         "@types/react-router-dom": "^5.3.3",
+        "@types/rollup-plugin-peer-deps-external": "^2.2.1",
         "autoprefixer": "^10.4.13",
         "buffer": "^6.0.3",
         "cross-env": "^7.0.3",
-        "eslint-config-custom": "workspace:*",
+        "eslint-config-custom": "*",
+        "i18next": "^22.0.6",
         "postcss": "^8.4.19",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-i18next": "^12.0.0",
         "react-scripts": "^5.0.1",
         "rimraf": "^3.0.2",
+        "rollup": "^2.79.1",
+        "rollup-plugin-peer-deps-external": "^2.2.4",
+        "rollup-plugin-postcss": "^4.0.2",
+        "rollup-plugin-typescript2": "^0.34.0",
         "size-limit": "^8.1.0",
         "tailwindcss": "^3.2.4",
-        "tsconfig": "workspace:*",
+        "tsconfig": "*",
         "typescript": "^4.7.4",
+        "wagmi": "^0.9.5",
         "workbox-precaching": "^6.5.4",
         "workbox-routing": "^6.5.4"
     },
