--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,19 +24,20 @@
     "scripts": {
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './*.{json,md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './*.{json,md}'",
-        "build": "pnpm clean && rollup -c rollup.config.js",
+        "build": "yarn clean && rollup -c rollup.config.js",
         "clean": "rimraf ./dist",
         "test": "echo 'No tests' && exit 0",
         "size-limit": "size-limit",
-        "release": "pnpm publish",
+        "release": "yarn publish",
         "start": "start-storybook -p 6006",
         "build-storybook": "build-storybook"
     },
     "dependencies": {
-        "@carrot-kpi/sdk": "workspace:*",
+        "@carrot-kpi/sdk": "*",
         "@ethersproject/bignumber": "^5.7.0",
         "@popperjs/core": "^2.11.6",
         "@tiptap/extension-placeholder": "2.0.0-beta.209",
+        "@tiptap/pm": "^2.0.0-beta.212",
         "@tiptap/react": "2.0.0-beta.209",
         "@tiptap/starter-kit": "2.0.0-beta.209",
         "@types/react-virtualized-auto-sizer": "^1.0.1",
@@ -78,7 +79,7 @@
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
         "autoprefixer": "^10.4.13",
         "babel-loader": "^8.2.5",
-        "eslint-config-custom": "workspace:*",
+        "eslint-config-custom": "*",
         "file-loader": "^6.2.0",
         "postcss": "^8.4.19",
         "postcss-loader": "^7.0.2",
@@ -92,6 +93,6 @@
         "size-limit": "^8.1.0",
         "storybook-dark-mode": "^2.0.4",
         "tailwindcss": "^3.2.4",
-        "tsconfig": "workspace:*"
+        "tsconfig": "*"
     }
 }
