feat(frontend): turn frontend into a library to improve templates development and other changes

--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -2,6 +2,8 @@
     "extends": "tsconfig/react.json",
     "include": ["./src/**/*"],
     "compilerOptions": {
-        "lib": ["dom", "esnext", "webworker"]
+        "lib": ["dom", "esnext", "webworker"],
+        "declaration": true,
+        "rootDir": "./src"
     }
 }
