chore(subgraph): add version field so that deps are installed by yarn

--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@carrot-kpi/subgraph",
+    "version": "0.1.0",
     "license": "UNLICENSED",
     "scripts": {
         "codegen": "graph codegen",
