--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -11,12 +11,11 @@
         "format": "prettier --write ."
     },
     "dependencies": {
-        "eslint": "latest",
-        "eslint-config-next": "latest",
-        "eslint-config-prettier": "latest",
-        "eslint-config-turbo": "latest",
-        "eslint-plugin-prettier": "latest",
-        "eslint-plugin-react": "latest"
+        "eslint": "^8.33.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-config-turbo": "^0.0.7",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.32.2"
     },
     "devDependencies": {
         "prettier": "^2.8.3"
