chore(frontend): export shared dependencies

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,6 +12,9 @@
         },
         "./styles.css": {
             "import": "./dist/styles.css"
+        },
+        "./shared-dependencies.json": {
+            "import": "./shared-dependencies.json"
         }
     },
     "publishConfig": {
