chore(frontend): export shared dependencies (cjs)

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,7 +14,8 @@
             "import": "./dist/styles.css"
         },
         "./shared-dependencies.json": {
-            "import": "./shared-dependencies.json"
+            "import": "./shared-dependencies.json",
+            "require": "./shared-dependencies.json"
         }
     },
     "publishConfig": {
