Switch to `yarn`, frontend library package and other changes (#94)
* v1.0.0-rc.19

* chore: switch from pnpm to yarn

* chore: use yarn in ci actions and husky hooks too

* chore: generally fix linting and formatting

* chore: adapt rollup configs to work with yarn

* chore(ui): remove pointless provider component and export

* feat(react): use script tag approach to load federated modules (removal of set public path function)

* chore(react): uppercase acronyms in variable names

* feat(frontend): turn frontend into a library to improve templates development and other changes

* fix(subgraph): move graph cli to dev dependencies

* chore(subgraph): add version field so that deps are installed by yarn

* feat: add fleek base docker build and specific deps versions in eslint config

* fix(frontend): update shared dependencies json

* feat(frontend): pass template in link state in create with template id component

* feat(frontend): avoid running a ipfs node in service worker

* feat: rename marquees components

* chore(frontend): v1.0.0-rc.21

* chore(react): v0.25.0

* chore(frontend): add fixme

* chore(frontend): export shared dependencies

* chore(frontend): v1.0.0-rc.22

* chore(frontend): export shared dependencies (cjs)

* chore(frontend): v1.0.0-rc.23

* fix(ui): update storybook webpack config

--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "description": "A monorepo for Carrot v1 packages.",
     "author": "Federico Luzzi <federico.luzzi@protonmail.com>",
     "license": "GPL-3.0-or-later",
+    "workspaces": [
+        "packages/*"
+    ],
     "scripts": {
         "build": "turbo run build",
+        "build-frontend-library": "turbo run build-library --filter @carrot-kpi/frontend",
         "build-storybook": "turbo run build-storybook --filter @carrot-kpi/ui",
         "lint": "turbo run lint",
         "format": "turbo run format",
