--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -38,7 +38,8 @@
         "class-variance-authority": "^0.4.0",
         "ethereum-blockies-base64": "^1.0.2",
         "ethers": "^5.7.1",
-        "react-router-dom": "^6.3.0"
+        "react-router-dom": "^6.3.0",
+        "sanitize-html": "^2.9.0"
     },
     "peerDependencies": {
         "@fontsource/ibm-plex-mono": "^4.5.13",
@@ -65,6 +66,7 @@
         "@types/react-dom": "^18.0.6",
         "@types/react-router-dom": "^5.3.3",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
+        "@types/sanitize-html": "^2.8.0",
         "autoprefixer": "^10.4.13",
         "buffer": "^6.0.3",
         "cross-env": "^7.0.3",
