--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -20,7 +20,7 @@
     "scripts": {
         "lint": "eslint --ext .tsx,.ts ./src && prettier --check './*.{json,.md}'",
         "format": "eslint --fix --ext .tsx,.ts,.js ./ && prettier --write './*.{json,.md}'",
-        "build": "yarn clean && rollup -c rollup.config.js",
+        "build": "yarn clean && rollup -c rollup.config.mjs",
         "clean": "rimraf ./dist",
         "test": "jest",
         "size-limit": "size-limit",
@@ -41,16 +41,16 @@
         "@babel/preset-env": "^7.19.4",
         "@babel/preset-typescript": "^7.18.6",
         "@ethersproject/abi": "^5.7.0",
-        "@jest/globals": "^29.2.2",
-        "@rollup/plugin-commonjs": "^23.0.2",
+        "@jest/globals": "^29.4.2",
+        "@rollup/plugin-commonjs": "^24.0.1",
         "@rollup/plugin-node-resolve": "^15.0.1",
         "@size-limit/preset-small-lib": "^8.1.0",
         "@types/jest": "^29.2.1",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
-        "babel-jest": "^29.2.2",
+        "babel-jest": "^29.4.2",
         "eslint-config-custom": "*",
-        "jest": "^29.2.2",
-        "rimraf": "^3.0.2",
+        "jest": "^29.4.2",
+        "rimraf": "^4.1.2",
         "rollup": "^3.2.3",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-typescript2": "^0.34.0",
